# sumans-kitchen

./: .gitignore  Makefile  README.md
kitchen-backend/: .env.example  Dockerfile  eslint.config.mjs  fly.toml  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
kitchen-backend/app/: config.py  database.py
kitchen-backend/app/models/: recipe.py  user.py
kitchen-backend/app/routes/: auth.py  generate.py  recipes.py
kitchen-backend/app/services/: auth_service.py  generate_service.py  recipe_service.py  storage_service.py
kitchen-backend/data/: recipes.ts
kitchen-backend/requests/: create_recipe.rest  delete_recipe.rest  generate_prompt.rest  update_recipe.rest
kitchen-backend/src/: index.ts  types.ts
kitchen-backend/src/models/: recipe.ts
kitchen-backend/src/routes/: generate.ts  recipes.ts
kitchen-backend/src/services/: generateService.ts  recipeService.ts
kitchen-backend/src/utils/: config.ts  logger.ts  middleware.ts  zodSchemas.ts
kitchen-backend/tests/: initialRecipes.ts
kitchen-frontend/: index.html  package-lock.json  package.json
kitchen-frontend/src/: App.css  App.tsx  index.css  main.tsx  store.ts  types.ts
kitchen-frontend/src/components/: CreateRecipe.tsx  Header.tsx  Home.tsx  Login.tsx  MyRecipes.tsx  PageNotFound.tsx  PublicRecipes.tsx  RecipeCard.tsx  RecipeDetail.tsx  RecipeForm.tsx  RecipePage.tsx  Register.tsx  chatgpt-output.tsx
kitchen-frontend/src/reducers/: authReducer.ts  recipeReducer.ts
kitchen-frontend/src/services/: auth.ts  generate.ts  login.ts  recipes.ts
